<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="15dp">

    <TextView
        style="@style/H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:text="@string/enter_profile_info"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/name"
            android:inputType="textPersonName"

            tools:text="Иван"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_edit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/surname"
            android:inputType="textPersonName"

            tools:text="Иванович"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/skip"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"

            android:text="@string/skip"/>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@id/btnContinue"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_marginStart="15dp"

            android:text="@string/continue_text"/>

    </LinearLayout>

</LinearLayout>