<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="15dp">

    <TextView
        style="@style/H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/registration"
        android:textAllCaps="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            tools:text="a@a.a"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"

            tools:text="89158273032"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            tools:text="111111"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnContinue"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"

        android:text="@string/register"/>

</LinearLayout>