<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/H1"
        android:id="@+id/login_text"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"

        android:text="@string/edit_info_to_enter"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignoreViewBinding="true"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintTop_toBottomOf="@id/login_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            tools:text="a@a.a"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintTop_toBottomOf="@id/email_edit_layout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"

        tools:text="89158273032"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/parent_margin"
        android:layout_marginEnd="@dimen/parent_margin"
        
        android:text="@string/login"
        
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>